# cliptool

./: .gitignore  README.md  pyproject.toml
src/cliptool/: cli.py  payload.py  utils.py  x11.py
