[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cliptool"
version = "0.2.0"
description = "Small X11 clipboard helper for text, path, file URI, and image copying"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "argcomplete>=3.0",
]

[project.scripts]
cliptool = "cliptool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]